Updated to Unity 2017.4.1, fixed aspect ratio problems, other fixes
- vuforia components replaced
- databoard layout improved on different aspect ratios
- data source config is ensured to be loaded before databoard activates
- empy datasource url now shows a warning
- removed some invisible sprites causing rendering overhead

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,18 @@ sysinfo.txt
 *.unitypackage
 
 # Vuforia
+/Assets/Vuforia*
+/Assets/Resources/Vuforia*
+/Assets/Editor/Vuforia*
+/Assets/Models/Vuforia*
+/Assets/StreamingAssets/Vuforia*
 /QCAR/
+
+# these 4 ignores can be removed if something is added to the folders
+/Assets/Resources.meta
+/Assets/Editor.meta
+/Assets/Models.meta
+/Assets/StreamingAssets.meta
 
 # Audio
 Assets/Soludus/AR Game/Sounds/**/*.mp3
